2010-03-30  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        Cannot animate "points" attribute for <svg:polygon>
        https://bugs.webkit.org/show_bug.cgi?id=21371

        Add animation support for 'points' on polygons in SVG.

        Test: svg/animations/animate-points.html

        * svg/SVGAnimateElement.cpp:
        (WebCore::SVGAnimateElement::determinePropertyType):
        (WebCore::SVGAnimateElement::calculateAnimatedValue):
        (WebCore::SVGAnimateElement::calculateFromAndToValues):
        (WebCore::SVGAnimateElement::resetToBaseValue):
        (WebCore::SVGAnimateElement::applyResultsToTarget):
        * svg/SVGAnimateElement.h:
        (WebCore::SVGAnimateElement::): added PropertyType PointsProperty
        * svg/SVGPointList.cpp:
        (WebCore::blendFunc):
        (WebCore::SVGPointList::createAnimated): calculates animated PointList
        * svg/SVGPointList.h:

2010-03-30  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Cannot animate "points" attribute for <svg:polygon>
        https://bugs.webkit.org/show_bug.cgi?id=21371

        Tests if points of a polygon are animateable.

        * svg/animations/animate-points-expected.txt: Added.
        * svg/animations/animate-points.html: Added.
        * svg/animations/script-tests/animate-points.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):


Canonical link: https://commits.webkit.org/48089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56795 268f45cc-cd09-0410-ab3c-d52691b4dbfc