WebCore/svg/SVGAnimateElement.h
@@ -29,6 +29,7 @@
 
 namespace WebCore {
     class SVGPathSegList;
+    class SVGPointList;
 
     class SVGAnimateElement : public SVGAnimationElement {
     public:
@@ -44,7 +45,7 @@ namespace WebCore {
         virtual float calculateDistance(const String& fromString, const String& toString);
 
     private:
-        enum PropertyType { NumberProperty, ColorProperty, StringProperty, PathProperty };
+        enum PropertyType { NumberProperty, ColorProperty, StringProperty, PathProperty, PointsProperty };
         PropertyType determinePropertyType(const String& attribute) const;
         PropertyType m_propertyType;
         
@@ -61,6 +62,9 @@ namespace WebCore {
         RefPtr<SVGPathSegList> m_fromPath;
         RefPtr<SVGPathSegList> m_toPath;
         RefPtr<SVGPathSegList> m_animatedPath;
+        RefPtr<SVGPointList> m_fromPoints;
+        RefPtr<SVGPointList> m_toPoints;
+        RefPtr<SVGPointList> m_animatedPoints;
     };
 
 } // namespace WebCore
