WebCore/svg/SVGPathSegList.h
@@ -45,6 +45,8 @@ namespace WebCore {
         SVGPathSegList(const QualifiedName&);
     };
 
+    float adjustAnimatedValue(float from, float to, float progress);
+
 } // namespace WebCore
 
 #endif // ENABLE(SVG)
