WebCore/svg/SVGPointList.h
@@ -37,6 +37,8 @@ namespace WebCore {
 
         String valueAsString() const;
 
+        static PassRefPtr<SVGPointList> createAnimated(const SVGPointList* fromList, const SVGPointList* toList, float progress);
+
     private:
         SVGPointList(const QualifiedName&);
     };
